RESOLVED FIXED100295
[V8] WorkerContextExecutionProxy doesn't need to track events
https://bugs.webkit.org/show_bug.cgi?id=100295
Summary [V8] WorkerContextExecutionProxy doesn't need to track events
Adam Barth
Reported 2012-10-24 15:20:02 PDT
[V8] WorkerContextExecutionProxy doesn't need to track events
Attachments
Patch (5.52 KB, patch)
2012-10-24 15:21 PDT, Adam Barth
no flags
Eric Seidel (no email)
Comment 1 2012-10-24 15:20:43 PDT
His patch may explain some set of our crash-on-shutdown bugs.
Adam Barth
Comment 2 2012-10-24 15:21:52 PDT
Adam Barth
Comment 3 2012-10-24 15:23:34 PDT
/cc the author and reviewer of http://trac.webkit.org/changeset/41862
Abhishek Arya
Comment 4 2012-10-24 15:27:27 PDT
Nice catch. I just did a search for "Vector<Event*" across our codebase and this seems like the only place left.
WebKit Review Bot
Comment 5 2012-10-24 16:17:48 PDT
Comment on attachment 170484 [details] Patch Clearing flags on attachment: 170484 Committed r132417: <http://trac.webkit.org/changeset/132417>
WebKit Review Bot
Comment 6 2012-10-24 16:17:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.