[V8] WorkerContextExecutionProxy doesn't need to track events https://bugs.webkit.org/show_bug.cgi?id=100295

Reviewed by Eric Seidel.

This code was added when this code was originally upstreamed as part of
the Chromium port. There doesn't appear to be any reason why
WorkerContextExecutionProxy needs to keep a Vector of raw event
pointers. Those points are likely to become dangling, making the rest
of what this code does very sketchy.

* bindings/v8/V8WorkerContextEventListener.cpp:
(WebCore::V8WorkerContextEventListener::callListenerFunction):
* bindings/v8/WorkerContextExecutionProxy.cpp:
(WebCore::WorkerContextExecutionProxy::dispose):
* bindings/v8/WorkerContextExecutionProxy.h:
(WebCore::WorkerContextExecutionState::WorkerContextExecutionState):
(WorkerContextExecutionProxy):


Canonical link: https://commits.webkit.org/118332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132417 268f45cc-cd09-0410-ab3c-d52691b4dbfc